Kubernetes/kubernetes-manifests/09-dev-astro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redux-todo-astro-dev
  namespace: redux-todo-astro
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redux-todo-astro-dev
  template:
    metadata:
      labels:
        app: redux-todo-astro-dev
    spec:
      containers:
      - name: redux-todo-astro
        image: henry768/redux-todo-in-astro:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 4321
          name: http
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - name: redux-todo-data
          mountPath: /app/data
      volumes:
      - name: redux-todo-data
        persistentVolumeClaim:
          claimName: redux-todo-data-pvc
