Kubernetes/kubernetes-manifests/09-prod-astro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redux-todo-astro-prod
  namespace: redux-todo-astro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redux-todo-astro-prod
  template:
    metadata:
      labels:
        app: redux-todo-astro-prod
    spec:
      containers:
      - name: redux-todo-astro
        image: redux-todo-prod:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4321
          name: http
        - containerPort: 24678
          name: websocket
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
