Kubernetes/kubernetes-manifests/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redux-todo-astro
  namespace: redux-todo-astro
  labels:
    app: redux-todo-astro
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4321
    protocol: TCP
    name: http
  - port: 24678
    targetPort: 24678
    protocol: TCP
    name: hmr
  selector:
    app: redux-todo-astro
