Kubernetes/kubernetes-manifests/10-dev-astro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redux-todo-astro-dev-svc
  namespace: redux-todo-astro
spec:
  selector:
    app: redux-todo-astro-dev
  ports:
  - port: 80
    targetPort: 4321
    protocol: TCP
    name: http
  type: ClusterIP
