Kubernetes/kubernetes-manifests/10-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redux-todo-astro-dev
  namespace: redux-todo-astro
  labels:
    app: redux-todo-astro-dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: redux-todo-astro-dev
