Kubernetes/kubernetes-manifests/10-prod-astro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redux-todo-astro-prod-service
  namespace: redux-todo-astro
spec:
  selector:
    app: redux-todo-astro-prod
  ports:
  - name: http
    port: 4321
    targetPort: 4321
  - name: websocket
    port: 24678
    targetPort: 24678
  type: ClusterIP
