Kubernetes/kubernetes-manifests/11-k3s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redux-todo-astro-ingress
  namespace: redux-todo-astro
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redux-todo-astro-prod-service
            port:
              number: 4321
